// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Button render outline should render 1px border when theme.border.width is 0 1`] = `
<button
  class="sc-bdVaJa dJnTLU"
>
  <span>
    button
  </span>
</button>
`;

exports[`Button render outline should render correctly 1`] = `
<button
  class="sc-bdVaJa dlDaRH"
>
  <span>
    button
  </span>
</button>
`;

exports[`Button render prepend and append should render append correctly 1`] = `
<div>
  <button
    class="sc-bdVaJa jMJazo"
  >
    <span>
      button
    </span>
    <span
      class="sc-htpNat htFjFE"
    >
      <svg
        fill="none"
        height="1em"
        stroke="currentColor"
        stroke-linecap="round"
        stroke-linejoin="round"
        stroke-width="2"
        viewBox="0 0 24 24"
        width="1em"
        xmlns="http://www.w3.org/2000/svg"
      >
        <circle
          cx="12"
          cy="12"
          r="10"
        />
        <line
          x1="14.31"
          x2="20.05"
          y1="8"
          y2="17.94"
        />
        <line
          x1="9.69"
          x2="21.17"
          y1="8"
          y2="8"
        />
        <line
          x1="7.38"
          x2="13.12"
          y1="12"
          y2="2.06"
        />
        <line
          x1="9.69"
          x2="3.95"
          y1="16"
          y2="6.06"
        />
        <line
          x1="14.31"
          x2="2.83"
          y1="16"
          y2="16"
        />
        <line
          x1="16.62"
          x2="10.88"
          y1="12"
          y2="21.94"
        />
      </svg>
    </span>
  </button>
</div>
`;

exports[`Button render prepend and append should render prepend correctly 1`] = `
<div>
  <button
    class="sc-bdVaJa jMJazo"
  >
    <span
      class="sc-bwzfXH eWaHkS"
    >
      <svg
        fill="none"
        height="1em"
        stroke="currentColor"
        stroke-linecap="round"
        stroke-linejoin="round"
        stroke-width="2"
        viewBox="0 0 24 24"
        width="1em"
        xmlns="http://www.w3.org/2000/svg"
      >
        <circle
          cx="12"
          cy="12"
          r="10"
        />
        <line
          x1="14.31"
          x2="20.05"
          y1="8"
          y2="17.94"
        />
        <line
          x1="9.69"
          x2="21.17"
          y1="8"
          y2="8"
        />
        <line
          x1="7.38"
          x2="13.12"
          y1="12"
          y2="2.06"
        />
        <line
          x1="9.69"
          x2="3.95"
          y1="16"
          y2="6.06"
        />
        <line
          x1="14.31"
          x2="2.83"
          y1="16"
          y2="16"
        />
        <line
          x1="16.62"
          x2="10.88"
          y1="12"
          y2="21.94"
        />
      </svg>
    </span>
    <span>
      button
    </span>
  </button>
</div>
`;

exports[`Button render variant should render correctly when variant is primary 1`] = `
<div>
  <button
    class="sc-bdVaJa jMJazo"
  >
    <span>
      button
    </span>
  </button>
</div>
`;
